--- a/styles/Galeria.css
+++ b/styles/Galeria.css
@@ -43,12 +43,17 @@ body {
 }
 /*------------*/
 
+main {
+  display: flex;
+  flex-direction: column;
+}
+
 #gallery-container {
   position: relative;
   width: 500px;
   height: auto;
-  padding-top: 256px;
-  padding-bottom: 12px;
+  padding-top: 312px;
+  padding-bottom: 9px;
   margin-top: 36px;
   margin-left: auto;
   margin-right: auto;
@@ -56,8 +61,23 @@ body {
   border: 1px solid red;
   border-radius: 12px;
 }
+.tittle {
+  position: absolute;
+  top: 12px;
+  right: 118px;
+}
+.tittle-vs {
+  position: absolute;
+  top: 12px;
+  right: 152px;
+}
+.tittle-p {
+  position: absolute;
+  top: 12px;
+  right: 183px;
+}
 .gallery-item {
-  display: inline-flex;
+  display: inline-block;
 }
 .gallery-label {
   display: flex;
@@ -68,25 +88,26 @@ body {
   width: 100px;
   object-fit: contain;
 }
-.gallery-selector {
-  /* display: none; */
-}
 .gallery-selector:checked ~ .gallery-fullsize {
   display: block;
   /*Cuando el usuario presione el check la imagen full size aparecera*/
 }
-.gallery-fullsize {
-  position: absolute;
-  top: 15px;
-  left: 50px;
+.gallery-selector:checked ~ .gallery-fullsize-default {
   display: none;
-  width: 400px;
-  object-fit: contain;
 }
 .gallery-fullsize-default {
   position: absolute;
-  top: 15px;
+  top: 66px;
   left: 50px;
   width: 400px;
+  object-fit: contain;
+}
+.gallery-fullsize {
+  position: absolute;
+  top: 66px;
+  left: 50px;
+  display: none;
+  width: 400px;
+  height: 224.38px;
   object-fit: contain;
 }
