--- a/styles/Galeria.css
+++ b/styles/Galeria.css
@@ -13,6 +13,10 @@ body {
   align-items: center;
   border-bottom: 1px solid red;
   box-shadow: 0px 0px 8px red;
+  position: fixed;
+  width: 100%;
+  background-color: rgb(68, 209, 245);
+  z-index: 5;
 }
 .navbar div {
   display: flex;
@@ -46,6 +50,8 @@ body {
 main {
   display: flex;
   flex-direction: column;
+  padding-top: 78px;
+  z-index: 0;
 }
 
 #gallery-container {
@@ -54,9 +60,7 @@ main {
   height: auto;
   padding-top: 312px;
   padding-bottom: 9px;
-  margin-top: 36px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 24px auto 24px auto;
   text-align: center;
   border: 1px solid red;
   border-radius: 12px;
