--- a/styles/Recomendaciones.css
+++ b/styles/Recomendaciones.css
@@ -13,6 +13,9 @@ body {
   align-items: center;
   border-bottom: 1px solid red;
   box-shadow: 0px 0px 8px red;
+  position: fixed;
+  width: 100%;
+  background-color: rgb(68, 209, 245);
 }
 .navbar div {
   display: flex;
@@ -42,10 +45,13 @@ body {
   padding: 4px;
 }
 /*-----*/
+main {
+  padding-top: 100px;
+}
 .form-container {
   display: flex;
   justify-content: center;
-  margin-top: 38px;
+  /* margin-top: 38px; */
 }
 
 form {
