--- a/ANIMES/styles/semana2.css
+++ b/ANIMES/styles/semana2.css
@@ -48,6 +48,8 @@ body {
 main {
   padding-top: 100px;
   display: flex;
+  justify-content: space-evenly;
+  align-content: center;
 }
 .animes-on {
   border: 1px solid red;
