--- a/PROYECTO_C1/style.css
+++ b/PROYECTO_C1/style.css
@@ -107,8 +107,8 @@ circle:nth-child(3) {
   width: 100%;
   height: 38px;
   /* position: sticky;
-  top: 0;
-  z-index: 100; */
+  top: 0;*/
+  z-index: 100;
 }
 .menu-content-list {
   display: flex;
@@ -119,8 +119,8 @@ circle:nth-child(3) {
   background-color: #c4151c;
   list-style: none;
   /* position: sticky;
-  top: 0;
-  z-index: 100; */
+  top: 0;*/
+  z-index: 100;
 }
 .items {
   display: inline-block;
@@ -225,57 +225,176 @@ circle:nth-child(3) {
 main {
   height: 100%;
 }
+/*-*/
 .hero_content-container {
   width: 80%;
   height: 700px;
   margin: auto;
   background-color: #00acf0;
 }
+/*-*/
 .evento {
   width: 80%;
   height: 700px;
   margin: 8px auto;
   background-color: #00acf0;
 }
+/*-*/
 .programacion {
   width: 80%;
   height: 700px;
   margin: 8px auto;
   background-color: #00acf0;
 }
-
+/*-*/
 .asides {
   width: 80%;
-  height: 700px;
+  height: 600px;
   margin: 8px auto;
-  background-color: #05df5c;
+  /* background-color: #05df5c; */
   display: flex;
 }
-.spotify,
+.spotify-container,
 .img_animada {
   width: 50%;
-  height: 700px;
+  height: 600px;
   margin: auto;
-  background-color: #00acf0;
+  /* background-color: #00acf0; */
 }
 .spotify {
-  margin-right: 8px;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
 }
+/*-------*/
 .img_animada {
-  margin-left: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+.albumes_tittle {
+  font-size: 5rem;
+  margin-bottom: 24px;
+}
+.albumes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.albumes ul {
+  list-style-type: none;
+  width: 424px;
+}
+/* animation */
+.albumes ul li,
+.albumes li img {
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  z-index: 0;
+}
+.albumes ul li {
+  position: relative;
+  float: left;
+  width: 130px;
+  height: 130px;
+  margin: 5px;
+  padding: 5px;
+  z-index: 0;
+}
+/* Make sure z-index is higher on hover */
+/* Ensure that hover image overlapped the others */
+.albumes ul li:hover {
+  z-index: 5;
+}
+/* Image is position nicely under li */
+.albumes ul li img {
+  position: relative;
+  left: 0;
+  top: 0;
+  border: 1px solid #dddddd;
+  padding: 5px;
+  width: 130px;
+  height: 130px;
+  background: rgb(255, 214, 221);
+}
+.albumes ul li img:hover {
+  width: 200px;
+  height: 200px;
+  margin-top: -130px;
+  margin-left: -130px;
+  top: 65%;
+  left: 65%;
+}
+/*-*/
 .pp_venta {
   width: 80%;
   height: 700px;
   margin: 8px auto;
   background-color: #00acf0;
 }
+/*-*/
 .form {
   width: 80%;
-  height: 700px;
+  height: 613px;
   margin: 8px auto;
   background-color: #00acf0;
+  display: flex;
+  justify-content: center;
 }
+.titlle-form {
+  font-size: 5rem;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 32px;
+}
+
+form label {
+  margin-top: 32px;
+  /* margin-left: 24px; */
+}
+span {
+  font-size: 2.5rem;
+}
+
+.input {
+  width: 367px;
+  height: 36px;
+  padding: 19px 12px;
+  box-sizing: border-box;
+  background-color: #f1f1f1;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  font-size: 1.5rem;
+}
+
+.primary-button {
+  width: 42rem;
+  height: 5rem;
+  background-color: #d8260c;
+  font-size: 2rem;
+  color: black;
+  padding: 14px 20px;
+  margin-top: 38px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.primary-button:hover {
+  box-shadow: 0px 0px 8px red;
+  opacity: 1;
+  background-color: red;
+  text-decoration: underline;
+}
+/*-*/
 .sponsors {
   width: 80%;
   height: 300px;
@@ -285,6 +404,44 @@ main {
 /*------------------*/
 footer {
   width: 100%;
-  height: 226px;
+  height: 167px;
   background-color: #c4151c;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 24px;
+}
+.tittle_logo2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffd9;
+  border-radius: 50%;
+  width: 160px;
+  height: 144px;
+  margin-left: 44px;
+}
+.tittle2 {
+  font-size: 3.5rem;
+  margin: 2px;
+}
+.logo2 {
+  width: 5rem;
+  height: 5rem;
+}
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 34px;
+  font-size: 1.5rem;
+}
+.redes {
+  list-style: none;
+  display: flex;
+}
+.redes img {
+  width: 30px;
+  height: 30px;
+  margin-right: 12px;
 }
