--- a/PROYECTO_C1/style.css
+++ b/PROYECTO_C1/style.css
@@ -307,7 +307,7 @@ main {
   height: 574px;
   margin: 8px auto;
   background-color: #00acf0;
-  border: 8px solid rgb(158, 235, 75);
+  border: 12px solid rgb(158, 235, 75);
   text-align: center;
   display: grid;
   grid-template-columns: 45% 10% 45%;
@@ -322,11 +322,11 @@ main {
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-width: 3px;
   -webkit-text-stroke-color: white;
-  text-shadow: 8px 8px #ff1f8f, 20px 20px #000000;
+  text-shadow: 8px 8px rgb(255, 214, 221), 20px 20px #000000;
 }
 .artist-main {
   font-size: 5rem;
-  margin: 34px auto 6px auto;
+  margin: 14px auto 6px auto;
 }
 .day1 ul,
 .day2 ul {
@@ -368,7 +368,7 @@ main {
 .asides {
   width: 80%;
   height: 600px;
-  margin: 8px auto;
+  margin: 44px auto;
   /* background-color: #05df5c; */
   display: flex;
 }
@@ -449,10 +449,59 @@ main {
 /*-*/
 .pp_venta {
   width: 80%;
-  height: 700px;
-  margin: 8px auto;
-  background-color: rgb(240, 198, 204);
+  height: 696px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 28px;
+  background-color: #02a444;
+  /*#fbf500
+  #02a444
+  #05df5c
+  #1bbeff*/
+  display: grid;
+  grid-template-rows: auto auto;
+  text-align: center;
+  font-size: 5rem;
+  padding: 14px 42px;
+  border: 12px solid #22c0ff;
 }
+.E12 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 274px;
+}
+.E12 img {
+  width: 362px;
+  height: 216px;
+  object-fit: contain;
+}
+.E12 img:hover {
+  width: 382px;
+  height: 236px;
+  object-fit: contain;
+  cursor: pointer;
+}
+.promE {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  height: 288px;
+}
+.promE img {
+  width: 483px;
+  height: 284px;
+  object-fit: contain;
+}
+.promE img:hover {
+  position: relative;
+  top: -20px;
+  width: 500px;
+  height: 306px;
+  object-fit: contain;
+  cursor: pointer;
+}
+
 /*-*/
 .form {
   width: 80%;
